# Clear-Up-Robot

./: README.md
cmake/Modules/: FindArNetworking.cmake  FindAria.cmake  FindArnl.cmake  FindBaseArnl.cmake  FindSonArnl.cmake  searchPath.cmake
map/: EmptyRoom.map  Labyrinth.map  SmallPlayGround.map  SmallRoomWithPole.map  SmallRoomWithPoleModified.map
src/: CMakeLists.txt
src/ariaExamples/: CMakeLists.txt
src/ariaExamples/action/: CMakeLists.txt  actionExample.cpp  actiongo.cpp  actiongo.h  actionturn.cpp  actionturn.h
src/ariaExamples/actionGroup/: CMakeLists.txt
src/ariaExamples/actsColorFollowing/: CMakeLists.txt
src/ariaExamples/cameraPTZ/: CMakeLists.txt
src/ariaExamples/demo/: CMakeLists.txt
src/ariaExamples/directMotion/: CMakeLists.txt
src/ariaExamples/functor/: CMakeLists.txt
src/ariaExamples/gotoAction/: CMakeLists.txt
src/ariaExamples/gripper/: CMakeLists.txt
src/ariaExamples/lasers/: CMakeLists.txt
src/ariaExamples/lineFinder/: CMakeLists.txt
src/ariaExamples/module/: CMakeLists.txt
src/ariaExamples/others/: CMakeLists.txt
src/ariaExamples/others/arm/: CMakeLists.txt
src/ariaExamples/others/auxSerial/: CMakeLists.txt
src/ariaExamples/others/config/: CMakeLists.txt
src/ariaExamples/others/dpptu/: CMakeLists.txt
src/ariaExamples/others/gps/: CMakeLists.txt
src/ariaExamples/others/gpsRobotTask/: CMakeLists.txt
src/ariaExamples/others/gyro/: CMakeLists.txt
src/ariaExamples/others/imu/: CMakeLists.txt
src/ariaExamples/others/ipthru/: CMakeLists.txt
src/ariaExamples/others/joydriveAction/: CMakeLists.txt
src/ariaExamples/others/joydriveThreaded/: CMakeLists.txt
src/ariaExamples/others/joydriveUserTask/: CMakeLists.txt
src/ariaExamples/others/mtxIO/: CMakeLists.txt
src/ariaExamples/others/mtxPowerControl/: CMakeLists.txt
src/ariaExamples/others/mtxWheelLights/: CMakeLists.txt
src/ariaExamples/others/netServerExample/: CMakeLists.txt
src/ariaExamples/others/robotConnectionCallbacks/: CMakeLists.txt
src/ariaExamples/others/seekurPower/: CMakeLists.txt
src/ariaExamples/others/sickLogger/: CMakeLists.txt
src/ariaExamples/others/sickTeleop/: CMakeLists.txt
src/ariaExamples/others/simpleMotionCommands/: CMakeLists.txt
src/ariaExamples/others/triangleDriveToAction/: CMakeLists.txt
src/ariaExamples/others/twoRobotWander/: CMakeLists.txt
src/ariaExamples/robotSyncTask/: CMakeLists.txt
src/ariaExamples/simpleConnect/: CMakeLists.txt
src/ariaExamples/socketClient/: CMakeLists.txt
src/ariaExamples/socketServer/: CMakeLists.txt
src/ariaExamples/soundsQueue/: CMakeLists.txt
src/ariaExamples/teleopActions/: CMakeLists.txt
src/ariaExamples/thread/: CMakeLists.txt
src/ariaExamples/wander/: CMakeLists.txt
src/ariaExamples/wanderAndLogData/: CMakeLists.txt
src/arnlExamples/: CMakeLists.txt  README.txt
src/arnlExamples/arnlJustLocalization/: CMakeLists.txt  arnlJustLocalization.cpp
src/arnlExamples/arnlServer/: CMakeLists.txt  arnlServer.cpp
src/arnlExamples/justPathPlanning/: CMakeLists.txt  justPathPlanning.cpp
src/arnlExamples/others/: CMakeLists.txt
src/arnlExamples/others/centralServerExample/: CMakeLists.txt  centralServerExample.cpp
src/arnlExamples/others/combinedJustLocalization/: CMakeLists.txt  combinedJustLocalization.cpp
src/arnlExamples/others/combinedServer/: CMakeLists.txt  combinedServer.cpp
src/arnlExamples/others/goalClient/: CMakeLists.txt  goalClient.cpp
src/arnlExamples/others/sickLogger/: CMakeLists.txt  sickLogger.cpp
src/arnlExamples/others/sonarnlJustLocalization/: CMakeLists.txt  sonarnlJustLocalization.cpp
src/arnlExamples/others/sonarnlServer/: CMakeLists.txt  sonarnlServer.cpp
src/arnlExamples/simpleDemo/: CMakeLists.txt  simpleDemo.cpp
src/behaviourLibrary/: CMakeLists.txt  arc.cpp  arc.h  forward.cpp  forward.h  move.cpp  move.h  swerve.cpp  swerve.h  turn.cpp  turn.h
src/project/: CMakeLists.txt  config.cpp  config.h  main.cpp
src/project/stateMachine/: mainStateMachine.cpp  mainStateMachine.h  state.cpp  state.h
src/project/states/: cvBallRecognition.cpp  cvBallRecognition.hpp  cvTestState.cpp  cvTestState.hpp  driveToTargetState.cpp  driveToTargetState.h  focusOnColorState.cpp  focusOnColorState.h  goToChestState.cpp  goToChestState.h  goToHomeState.cpp  goToHomeState.h  goToPlayAreaState.cpp  goToPlayAreaState.h  goToToyState.cpp  goToToyState.h  putToyState.cpp  putToyState.h  searchToyState.cpp  searchToyState.h  takeToyState.cpp  takeToyState.h  terminationState.cpp  terminationState.h  waitForColorSignalState.cpp  waitForColorSignalState.h
src/project/utils/: ariaMath.hpp  goToTask.cpp  goToTask.h  pid.hpp  utils.cpp  utils.hpp
src/robotServer/: CMakeLists.txt
src/robotServer/include/: defaultrobotserver.h  robotserver.h
src/robotServer/src/: defaultrobotserver.cpp  robotserver.cpp
src/snippets/: CMakeLists.txt
src/snippets/camera/: CMakeLists.txt  actsaction.cpp  actsaction.h  cameraaction.cpp  cameraaction.h  main.cpp
src/snippets/directAction/: CMakeLists.txt  main.cpp  patrolaction.cpp  patrolaction.h
src/snippets/gripper/: CMakeLists.txt  gripperaction.cpp  gripperaction.h  main.cpp
src/snippets/helloWorld/: CMakeLists.txt  helloWorldAction.cpp  helloWorldAction.h  main.cpp
src/snippets/maps/: CMakeLists.txt  main.cpp  mapinfoaction.cpp  mapinfoaction.h
src/snippets/pathPlanning/: CMakeLists.txt  main.cpp  pathtask.cpp  pathtask.h
src/snippets/robotInfo/: CMakeLists.txt  main.cpp  robotinfoaction.cpp  robotinfoaction.h
src/snippets/sensors/: CMakeLists.txt  laserreadingboxaction.cpp  laserreadingboxaction.h  main.cpp  sonarrangeaction.cpp  sonarrangeaction.h  sonarreadingaction.cpp  sonarreadingaction.h  sonarreadingboxaction.cpp  sonarreadingboxaction.h
