CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

ADD_SUBDIRECTORY(action)
ADD_SUBDIRECTORY(actionGroup)
ADD_SUBDIRECTORY(actsColorFollowing)
ADD_SUBDIRECTORY(cameraPTZ)
ADD_SUBDIRECTORY(demo)
ADD_SUBDIRECTORY(directMotion)
ADD_SUBDIRECTORY(functor)
ADD_SUBDIRECTORY(gotoAction)
ADD_SUBDIRECTORY(gripper)
ADD_SUBDIRECTORY(lasers)
ADD_SUBDIRECTORY(lineFinder)
ADD_SUBDIRECTORY(module)
ADD_SUBDIRECTORY(robotSyncTask)
ADD_SUBDIRECTORY(simpleConnect)
ADD_SUBDIRECTORY(socketClient)
ADD_SUBDIRECTORY(socketServer)
ADD_SUBDIRECTORY(soundsQueue)
ADD_SUBDIRECTORY(teleopActions)
ADD_SUBDIRECTORY(thread)
ADD_SUBDIRECTORY(wander)
ADD_SUBDIRECTORY(wanderAndLogData)

#ADD_SUBDIRECTORY(others)
