CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(moduleExample C CXX)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")

FIND_PACKAGE(Aria REQUIRED)

INCLUDE_DIRECTORIES(
        .
        ${Aria_INCLUDE_DIRS}
)

SET( LIBRARIES
        ${LIBRARIES}
        ${Aria_LIBRARIES}
)

# Build Module
SET(MODULE_FILES moduleExample_Mod)
SET(CMAKE_SHARED_LIBRARY_PREFIX "")
ADD_LIBRARY(moduleExample_Mod SHARED ${MODULE_FILES})

# Build Executable
SET(SOURCE_FILES moduleExample)
ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCE_FILES})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${LIBRARIES})
