CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

ADD_SUBDIRECTORY(arm)
ADD_SUBDIRECTORY(auxSerial)
ADD_SUBDIRECTORY(config)
ADD_SUBDIRECTORY(dpptu)
ADD_SUBDIRECTORY(gps)
ADD_SUBDIRECTORY(gpsRobotTask)
ADD_SUBDIRECTORY(gyro)
ADD_SUBDIRECTORY(imu)
ADD_SUBDIRECTORY(ipthru)
ADD_SUBDIRECTORY(joydriveAction)
ADD_SUBDIRECTORY(joydriveThreaded)
ADD_SUBDIRECTORY(joydriveUserTask)
ADD_SUBDIRECTORY(mtxIO)
ADD_SUBDIRECTORY(mtxPowerControl)
ADD_SUBDIRECTORY(mtxWheelLights)
ADD_SUBDIRECTORY(netServerExample)
ADD_SUBDIRECTORY(robotConnectionCallbacks)
ADD_SUBDIRECTORY(seekurPower)
ADD_SUBDIRECTORY(sickLogger)
ADD_SUBDIRECTORY(sickTeleop)
ADD_SUBDIRECTORY(simpleMotionCommands)
ADD_SUBDIRECTORY(triangleDriveToAction)
ADD_SUBDIRECTORY(twoRobotWander)
