CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(combinedServer C CXX)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")

FIND_PACKAGE(Aria REQUIRED)
FIND_PACKAGE(Arnl REQUIRED)
FIND_PACKAGE(SonArnl REQUIRED)

INCLUDE_DIRECTORIES(
        .
        ${Aria_INCLUDE_DIRS}
        ${Arnl_INCLUDE_DIRS}
        ${SonArnl_INCLUDE_DIRS}
)

SET( LIBRARIES
        ${LIBRARIES}
        ${Aria_LIBRARIES}
	${Arnl_LIBRARIES}
	${SonArnl_LIBRARIES}
)

AUX_SOURCE_DIRECTORY(. SOURCE_FILES)

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCE_FILES})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${LIBRARIES})
