CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(sickLogger C CXX)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")

FIND_PACKAGE(Aria REQUIRED)
FIND_PACKAGE(Arnl REQUIRED)

INCLUDE_DIRECTORIES(
        .
        ${ARIA_INCLUDE_DIRS}
        ${ARNL_INCLUDE_DIRS}
)

SET( LIBRARIES
        ${LIBRARIES}
        ${ARIA_LIBRARIES}
	${ARNL_LIBRARIES}
)

AUX_SOURCE_DIRECTORY(. SOURCE_FILES)

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCE_FILES})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${LIBRARIES})
